--- a/index.html
+++ b/index.html
@@ -20,42 +20,39 @@
 
         <div class="calculator__btn-wrapper">
             <div class="calculator__btn-first-line calculator-lines">
-                <button class="calculator__btn">7</button>
-                <button class="calculator__btn">8</button>
-                <button class="calculator__btn">9</button>
+                <button class="calculator__btn number">7</button>
+                <button class="calculator__btn number">8</button>
+                <button class="calculator__btn number">9</button>
                 <button class="calculator__btn del-btn">DEL</button>
             </div>
 
             <div class="calculator__btn-second-line calculator-lines">
-                <button class="calculator__btn">4</button>
-                <button class="calculator__btn">5</button>
-                <button class="calculator__btn">6</button>
-                <button class="calculator__btn">+</button>
+                <button class="calculator__btn number">4</button>
+                <button class="calculator__btn number">5</button>
+                <button class="calculator__btn number">6</button>
+                <button class="calculator__btn operator">+</button>
             </div>
 
             <div class="calculator__btn-third-line calculator-lines">
-                <button class="calculator__btn">1</button>
-                <button class="calculator__btn">2</button>
-                <button class="calculator__btn">3</button>
-                <button class="calculator__btn">-</button>
+                <button class="calculator__btn number">1</button>
+                <button class="calculator__btn number">2</button>
+                <button class="calculator__btn number">3</button>
+                <button class="calculator__btn operator">-</button>
             </div>
 
             <div class="calculator__btn-forth-line calculator-lines">
-                <button class="calculator__btn">.</button>
-                <button class="calculator__btn">0</button>
-                <button class="calculator__btn">/</button>
-                <button class="calculator__btn">*</button>
+                <button class="calculator__btn decimal">.</button>
+                <button class="calculator__btn number">0</button>
+                <button class="calculator__btn operator">/</button>
+                <button class="calculator__btn operator">*</button>
             </div>
 
             <div class="calculator__btn-fifth-line calculator-lines">
                 <button class="calculator__btn reser-btn">RESET</button>
-                <button class="calculator__btn equal-btn" onclick={calculate(input.value)}>=</button>
+                <button class="calculator__btn equal-btn">=</button>
             </div>
         </div>
     </div>
-
-
-
     <script src="./js/index.js"></script>
 </body>
 </html>
